// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkingSetting should match snapshot in empty state 1`] = `
<body>
  <div>
    <section
      class="flex flex-col items-start"
    >
      <div
        class="flex flex-row w-full justify-between"
      >
        <div>
          <h1
            class="text-neutral-400 text-xl font-bold mb-2"
          >
            Networking
          </h1>
          <p
            class="text-sm text-neutral-350 mb-2"
          >
            You can expose publicly over HTTP/gRPC the Kubernetes services deployed.
          </p>
          <span
            aria-controls="radix-:r6:"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="text-sm cursor-pointer text-brand-500 hover:text-brand-600 transition font-medium mb-5"
            data-state="closed"
            type="button"
          >
            How it works 
            <i
              aria-hidden="true"
              class="fa-regular fa-circle-question text-xs"
            />
          </span>
        </div>
        <button
          class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-neutral-500 text-sm h-11 px-5 rounded bg-brand-500 active:bg-brand-600 hover:bg-brand-400 text-white disabled:text-brand-300 disabled:bg-brand-100 gap-2"
        >
          Add port
          <i
            aria-hidden="true"
            class="fa-solid fa-plus-circle "
          />
        </button>
      </div>
      <form
        class="w-full"
      >
        <div
          class="border border-neutral-250 bg-neutral-100 rounded mb-5 w-full"
          data-testid="block-content"
        >
          <div
            class="flex items-center justify-between h-9 px-4 border-b border-neutral-250"
          >
            <h2
              class="font-medium text-neutral-400 text-ssm"
            >
              Services exposed publicly
            </h2>
          </div>
          <div
            class="p-0"
          >
            <div
              class="text-center my-4 py-5 px-10"
            >
              <i
                aria-hidden="true"
                class="fa-solid fa-wave-pulse text-neutral-300"
              />
              <p
                class="text-neutral-350 font-medium text-xs mt-1 mb-3"
              >
                No port are set.
              </p>
            </div>
          </div>
        </div>
      </form>
    </section>
  </div>
</body>
`;

exports[`NetworkingSetting should match snapshot with ports 1`] = `
<body>
  <div>
    <section
      class="flex flex-col items-start"
    >
      <div
        class="flex flex-row w-full justify-between"
      >
        <div>
          <h1
            class="text-neutral-400 text-xl font-bold mb-2"
          >
            Networking
          </h1>
          <p
            class="text-sm text-neutral-350 mb-2"
          >
            You can expose publicly over HTTP/gRPC the Kubernetes services deployed.
          </p>
          <span
            aria-controls="radix-:rd:"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="text-sm cursor-pointer text-brand-500 hover:text-brand-600 transition font-medium mb-5"
            data-state="closed"
            type="button"
          >
            How it works 
            <i
              aria-hidden="true"
              class="fa-regular fa-circle-question text-xs"
            />
          </span>
        </div>
        <button
          class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-neutral-500 text-sm h-11 px-5 rounded bg-brand-500 active:bg-brand-600 hover:bg-brand-400 text-white disabled:text-brand-300 disabled:bg-brand-100 gap-2"
        >
          Add port
          <i
            aria-hidden="true"
            class="fa-solid fa-plus-circle "
          />
        </button>
      </div>
      <form
        class="w-full"
      >
        <div
          class="border border-neutral-250 bg-neutral-100 rounded mb-5 w-full"
          data-testid="block-content"
        >
          <div
            class="flex items-center justify-between h-9 px-4 border-b border-neutral-250"
          >
            <h2
              class="font-medium text-neutral-400 text-ssm"
            >
              Services exposed publicly
            </h2>
          </div>
          <div
            class="p-0"
          >
            <div
              class="flex justify-between w-full items-center gap-3 px-5 py-4 border-b border-neutral-250 last:border-0"
            >
              <div
                class="flex flex-col"
              >
                <span
                  class="text-sm text-neutral-400 font-medium"
                >
                  My service
                </span>
                <div
                  class="flex flex-row text-xs gap-2 text-neutral-350"
                >
                  <span>
                    Service port: 
                    1234
                  </span>
                  <span>
                    Protocol: 
                    HTTP
                  </span>
                  <span>
                    Namespace: 
                    My namespace
                  </span>
                </div>
              </div>
              <div
                class="flex gap-2"
              >
                <button
                  class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-brand-500 text-xs h-9 px-3 rounded border border-neutral-250 dark:border-neutral-350 text-neutral-400 dark:text-neutral-300 hover:[&:not(:active)]:border-neutral-300 active:bg-neutral-150 disabled:text-neutral-300 disabled:bg-neutral-100 disabled:border-none bg-transparent"
                  data-testid="edit-port"
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    class="fa-solid fa-gear "
                  />
                </button>
                <button
                  class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-brand-500 text-xs h-9 px-3 rounded border border-neutral-250 dark:border-neutral-350 text-neutral-400 dark:text-neutral-300 hover:[&:not(:active)]:border-neutral-300 active:bg-neutral-150 disabled:text-neutral-300 disabled:bg-neutral-100 disabled:border-none bg-transparent"
                  data-testid="remove-port"
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    class="fa-solid fa-trash "
                  />
                </button>
              </div>
            </div>
            <div
              class="flex justify-between w-full items-center gap-3 px-5 py-4 border-b border-neutral-250 last:border-0"
            >
              <div
                class="flex flex-col"
              >
                <span
                  class="text-sm text-neutral-400 font-medium"
                >
                  My service 2
                </span>
                <div
                  class="flex flex-row text-xs gap-2 text-neutral-350"
                >
                  <span>
                    Service port: 
                    4321
                  </span>
                  <span>
                    Protocol: 
                    GRPC
                  </span>
                  <span>
                    Namespace: 
                  </span>
                </div>
              </div>
              <div
                class="flex gap-2"
              >
                <button
                  class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-brand-500 text-xs h-9 px-3 rounded border border-neutral-250 dark:border-neutral-350 text-neutral-400 dark:text-neutral-300 hover:[&:not(:active)]:border-neutral-300 active:bg-neutral-150 disabled:text-neutral-300 disabled:bg-neutral-100 disabled:border-none bg-transparent"
                  data-testid="edit-port"
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    class="fa-solid fa-gear "
                  />
                </button>
                <button
                  class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-brand-500 text-xs h-9 px-3 rounded border border-neutral-250 dark:border-neutral-350 text-neutral-400 dark:text-neutral-300 hover:[&:not(:active)]:border-neutral-300 active:bg-neutral-150 disabled:text-neutral-300 disabled:bg-neutral-100 disabled:border-none bg-transparent"
                  data-testid="remove-port"
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    class="fa-solid fa-trash "
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </form>
    </section>
  </div>
</body>
`;
